--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* RESET */
 * {
     margin: 0;
     padding: 0;
@@ -36,7 +35,7 @@ body {
 h1 {
     font-size: 2rem;
     margin-bottom: 2rem;
-    color: black
+    color: black;
     letter-spacing: 0.05rem;
 
 }
